force-app/main/default/objects/Directive_Score_Component__mdt/Directive_Score_Component__mdt.object-meta.xml
<CustomObject>
    <label>Directive Score Component</label>
    <pluralLabel>Directive Score Components</pluralLabel>
</CustomObject>