force-app/main/default/objects/Directive_Score_Component__mdt/fields/Calculation_Key__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Key__c</fullName>
    <label>Calculation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>