force-app/main/default/objects/Directive_Score_Component__mdt/fields/Calculation_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Strategy__c</fullName>
    <label>Calculation Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Apex</fullName><default>false</default><label>Apex</label></value>
            <value><fullName>Formula</fullName><default>false</default><label>Formula</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>