force-app/main/default/objects/Directive_Score_Component__mdt/fields/Component_Label__c.field-meta.xml
<CustomField>
    <fullName>Component_Label__c</fullName>
    <label>Component Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>