force-app/main/default/objects/Directive_Score_Component__mdt/fields/Maximum_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Contribution__c</fullName>
    <label>Maximum Contribution</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>