force-app/main/default/objects/Directive_Score_Component__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>